fix escape delay time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+# ----  fix escape delay time
+set -s escape-time 0
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect' // restore tmux session after reboot
